// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIndemnite CEI 1`] = `
Object {
  "formula": "(C * Sref * A)",
  "labels": Object {
    "Ancienneté conventionnelle (A)": 13.08,
    "Coefficient d'indemnité conventionnel (C)": 0.2,
    "Salaire de référence (Sref)": 4500,
  },
}
`;

exports[`getIndemnite CENI avec ajustement salaire 1`] = `
Object {
  "formula": "(C * Sref * A)",
  "labels": Object {
    "Ancienneté conventionnelle (A)": 13.08,
    "Coefficient d'indemnité conventionnel (C)": 0.25,
    "Salaire de référence (Sref)": 2441.66,
  },
}
`;

exports[`getIndemnite ETAM avec contrats précédents 1`] = `
Object {
  "formula": "(C * Sref * A - I)",
  "labels": Object {
    "Ancienneté conventionnelle (A)": 14.08,
    "Coefficient d'indemnité conventionnel (C)": 0.25,
    "Indemnité de licenciement perçue précédemment ( I )": 200,
    "Salaire de référence (Sref)": 4500,
  },
}
`;

exports[`getIndemnite ETAM avec contrats précédents et ajustement salaire 1`] = `
Object {
  "formula": "(C * Sref * A - I)",
  "labels": Object {
    "Ancienneté conventionnelle (A)": 14.08,
    "Coefficient d'indemnité conventionnel (C)": 0.25,
    "Indemnité de licenciement perçue précédemment ( I )": 200,
    "Salaire de référence (Sref)": 3000,
  },
}
`;

exports[`getIndemnite IC sans contrats précédents 1`] = `
Object {
  "formula": "(C * Sref * A)",
  "labels": Object {
    "Ancienneté conventionnelle (A)": 13.08,
    "Coefficient d'indemnité conventionnel (C)": 0.33,
    "Salaire de référence (Sref)": 4500,
  },
}
`;
